dev/non_executable_reasons_record_from_random_10k/9410.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function
from ipywidgets import Controller, FloatText, HTML, VBox
from pythreejs.install import install
from traitlets.traitlets import link, dlink
------------------

[0;36m  File [0;32m"<ipython-input-1-e70553a14b9e>"[0;36m, line [0;32m6[0m
[0;31m    from traitlets.traitlets import link, dlink[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-e70553a14b9e>, line 6)

Executability                            : False
